# cipher-os-hermes

./: .gitignore  BLUEPRINT.md  README.md  install.sh  pyproject.toml
cipher_os/: __init__.py
cipher_os/activity/: log.py
cipher_os/agents/: __init__.py  communication.py  orchestrator.py  recovery.py
cipher_os/api/: __init__.py  auth.py  middleware.py
cipher_os/api/routes/: activity.py  agents.py  auth.py  chat.py  dashboard.py  plan.py  settings.py  tickets.py  workspaces.py
cipher_os/api/websocket/: __init__.py  manager.py
cipher_os/cli/: __init__.py  main.py
cipher_os/core/: config.py  init_system.py  paths.py  workspace.py
cipher_os/integrations/: linear.py
cipher_os/memory/: __init__.py
cipher_os/tickets/: __init__.py
templates/agents/atlas/: personality.md
templates/agents/cipher/: personality.md
templates/agents/forge/: personality.md
templates/agents/lens/: personality.md
templates/agents/sentinel/: personality.md
templates/knowledge/: team-roster.md  workflows.md
templates/rules/: operations.md  safety.md
web/: package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/components/: Layout.css  Layout.tsx
web/src/lib/: api.ts
web/src/pages/: Activity.css  Activity.tsx  AgentDetail.css  AgentDetail.tsx  Agents.css  Agents.tsx  Chat.css  Chat.tsx  Dashboard.css  Dashboard.tsx  Login.css  Login.tsx  Plan.css  Plan.tsx  Settings.css  Settings.tsx  Tickets.css  Tickets.tsx  Workspaces.css  Workspaces.tsx
