[project]
name = "cipher-os"
version = "0.1.0"
description = "Distributable multi-agent OS layer for Hermes Agent"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "pyjwt>=2.8.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
all = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "pyjwt>=2.8.0",
]

[project.scripts]
cipher-os = "cipher_os.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
