[project]
name = "cipher-os"
version = "0.1.0"
description = "Distributable multi-agent OS layer for Hermes Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "pyjwt>=2.8.0",
]

[project.scripts]
cipher-os = "cipher_os.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
